--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -1,11 +1,23 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  first_name: MyString
+  last_name: MyString
+  building: MyString
+  address: MyString
   email: MyString
-  password: MyString
+  phone: MyString
+  emergency_phone: MyString
+  pup_parent: false
+  pup_provider: false
 
 two:
-  name: MyString
+  first_name: MyString
+  last_name: MyString
+  building: MyString
+  address: MyString
   email: MyString
-  password: MyString
+  phone: MyString
+  emergency_phone: MyString
+  pup_parent: false
+  pup_provider: false
