--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -36,11 +36,9 @@ engines:
 # http://docs.codeclimate.com/article/289-configuring-your-repository-via-codeclimate-yml#platform
 
 ratings:
-#   paths:
-#   - app/**
-#   - lib/**
-#   - "**.rb"
-#   - "**.go"
+   paths:
+- app/
+
 
 # You can globally exclude files from being analyzed by any engine using the
 # exclude_paths key.
