Update .codeclimate inclusions

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -37,7 +37,7 @@ engines:
 
 ratings:
    paths:
-- app/
+- app/**
 
 
 # You can globally exclude files from being analyzed by any engine using the
