codeclimate config update

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -37,7 +37,7 @@ engines:
 
 ratings:
    paths:
-   - app/**
+   - pup-share/**
 
 # You can globally exclude files from being analyzed by any engine using the
 # exclude_paths key.
