--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -38,6 +38,7 @@ engines:
 ratings:
    paths:
    - pup-share/**
+   - **/controllers/**
 
 # You can globally exclude files from being analyzed by any engine using the
 # exclude_paths key.
