--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -38,7 +38,7 @@ engines:
 ratings:
    paths:
    - pup-share/**
-   - **/controllers/**
+   - "**/controllers/**"
 
 # You can globally exclude files from being analyzed by any engine using the
 # exclude_paths key.
