--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -37,8 +37,8 @@ engines:
 
 ratings:
    paths:
-   - pup-share/**
-   - **
+  # - pup-share/**
+   - "**"
 
 # You can globally exclude files from being analyzed by any engine using the
 # exclude_paths key.
